--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,93 @@
-fastapi
-uvicorn
-pydantic
-requests
-dotenv
+altgraph==0.17.3
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==23.1.0
+bcrypt==4.3.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.4.1
+click==8.1.7
+colorama==0.4.6
+common==0.1.2
+contourpy==1.2.0
+cycler==0.12.1
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+fastapi==0.115.11
+fastapi-cli==0.0.7
+fonttools==4.50.0
+GeoAlchemy2==0.17.1
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+idna==3.6
+inflect==7.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.8.3
+mdurl==0.1.2
+more-itertools==10.6.0
+numpy==1.26.4
+opencv-python==4.9.0.80
+orjson==3.10.16
+outcome==1.3.0.post0
+packaging==24.0
+passlib==1.7.4
+pefile==2023.2.7
+pillow==10.2.0
+pyasn1==0.4.8
+pycparser==2.21
+pycryptodome==3.20.0
+pycryptodomex==3.20.0
+pydantic==2.10.6
+pydantic-extra-types==2.10.3
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+Pygments==2.17.2
+pyinstaller==5.11.0
+pyinstaller-hooks-contrib==2023.3
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pyparsing==3.1.2
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-jose==3.4.0
+python-multipart==0.0.20
+pywin32-ctypes==0.2.0
+PyYAML==6.0.2
+redis==5.2.1
+requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.14.0
+rsa==4.9
+selenium==4.16.0
+shapely==2.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+spark-parser==1.8.9
+sqlacodegen==3.0.0
+SQLAlchemy==2.0.40
+starlette==0.46.1
+term-background==1.0.1
+trio==0.23.2
+trio-websocket==0.11.1
+typeguard==4.4.2
+typer==0.15.2
+typing_extensions==4.12.2
+ujson==5.10.0
+uncompyle6==3.9.1
+urllib3==2.1.0
+uvicorn==0.34.0
+watchfiles==1.0.4
+websockets==15.0.1
+wsproto==1.2.0
+xdis==6.1.0
