--- a/fly.toml
+++ b/fly.toml
@@ -1,30 +1,22 @@
-app = "cned"  # 앱 이름 (fly launch 시 설정된 이름)
+# fly.toml app configuration file generated for cned on 2025-05-16T11:27:30+09:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-kill_signal = "SIGINT"
-kill_timeout = 5
-primary_region = "icn"  # 원하는 리전 코드 (예: 도쿄 = nrt, 서울 = icn)
+app = 'cned'
+primary_region = 'nrt'
 
 [build]
-  dockerfile = "Dockerfile"
 
-[env]
-  # 환경변수 기본값 정의 가능하나, 민감한 값은 fly secrets 사용 추천
-  PORT = "8080"
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-[[services]]
-  internal_port = 8080  # Dockerfile과 동일하게 설정해야 함
-  protocol = "tcp"
-
-  [[services.ports]]
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "10s"
-    restart_limit = 0
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
